<resources>
    <string name="app_name">Apollon</string>
    <string name="action_add_favourite">Add to favourites</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="server">Server URL</string>
    <string name="port">Port</string>
	<string name="login">Login</string>
	<string name="all">All</string>
	<string name="favourites">Favourites</string>
	<string name="added_to_favourites">added to favourites</string>
	<string name="added_to_queue">added to queue</string>
	<string name="default_timer">0:00</string>
    <string name="unsupported_format">Unsupported format</string>
    <string name ="share_message_start">I\'m listening to</string>
    <string name ="share_message_end">on Apollon</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="delete_message">Are you sure you want to delete playlist:</string>
    <string name="new_playlist">New playlist</string>
    <string name="edit_playlist_message">Choose a title</string>
    <string name="create">create</string>
    <string name="delete_title">Delete playlist</string>
    <string name="edit_title">Rename playlist</string>
    <string name="edit">Rename</string>
    <string name="player_notifications_channel">Player Notifications</string>
    <string name="previous">PREVIOUS</string>
    <string name="pause">PAUSE</string>
    <string name="play">PLAY</string>
    <string name="next">NEXT</string>
    <string name="search">Search</string>
    <string name="close">close</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="Favourites">Favourites</string>
    <string name="elements">%1$d elements</string>
    <string name="lyrics">Lyrics unavailable</string>
    <string name="playlists">Playlists</string>
    <string name="action_add_playlist">Add to a playlist</string>
    <string name="action_remove">Remove</string>
    <string name="error">Error</string>
    <string name="playlist_deleted">Playlist %1$s deleted</string>
    <string name="song_added">Song added to %1$s</string>
    <string name="already_in">Song already present in %1$s</string>
    <string name="song_removed">Song removed from %1$s</string>
    <string name="already_exists">%1$s already exists</string>
    <string name="lq" translatable="false">LQ</string>
    <string name="mq" translatable="false">MQ</string>
    <string name="hq" translatable="false">HQ</string>
    <string name="playlist_renamed">Playlist %1$s renamed</string>
    <string name="playlist_rename_fail">There is a playlist named %1$s already</string>
    <string name="no_connectivity">"It seems that you are not connected to the internet. Try later."</string>
</resources>
